July 23 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Wishing for "ring of teleport" now works
	* The game now asks whether one wants to remove saves when quitting in WMode
	* Real save is now removed and autosave is done when WMode is activated, to prevent
	  the potential abuse of the latter

July 23 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* The number of BodyParts and AllowedWeaponSkillCategories cached
	* Some S&R done:
	  * Description() -> GetDescription()
	  * PersonalPronoun() -> GetPersonalPronoun()
	  * PossessivePronoun() -> GetPossessivePronoun()
	  * ObjectPronoun() -> GetObjectPronoun()
	* There were some brackets missing in the attribute experience code, which caused them
	  to be increased and decreased twice as fast as they should; but this has been fixed
	* Nonhumanoids' StrengthExperience and AgilityExperience are now correctly initialized
	  with zero during creation

July 23 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Removed some obsolete and commented code
	* Dodge value is now cached
	* Optimized weaponskills and regeneration a bit

July 22 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* new Fountain effect: randomly activates a mode temporarily or permanently depending on luck.
	* teleporting yourself in Attnam no longer makes all the citizens angry.

July 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* AnimationController now redraws only the equipment; stats and msg panel are left
	  untouched

July 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* BurdenState and all non-trivial attack information is now cached
	* Some recently added bugs in TemporaryStateIsActivated(), EquipmentStateIsActivated(),
	  IsUsingArms(), IsUsingLegs() and IsUsingHead() fixed
	* Corrected a fatal bug in the interlevel travel code born due to Hex's search & replace
	* Fixed some odd block messages
	* Many new bugs included

July 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Config screen now shows "disabled" as the autosave interval if it's zero and