@@ -1,3 +1,8 @@
+July 24 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>
+
+	* void globalwindowhandler::UpdateTick() changed to return Tick
+
+
 July 23 2002 Timo Kiviluoto <sonor@phpoint.fi>
 
 	* Wishing for "ring of teleport" now works
